# my-gym-data-rust-parser

./: Cargo.toml  LICENSE  README.md  input.txt  makefile
src/: grammar.pest  lib.rs  main.rs
tests/: gym-data-parser-tests.rs
