[package]
name = "my-gym-data-rust-parser"
version = "0.1.0"
edition = "2021"
description = "A Rust parser for my gym data"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
pest = "2.7.14"
pest_debugger = "2.7.14"
pest_derive = "2.7.14"
thiserror = "2.0.3"
